display <video> elements with an xwidget.  Note that this is
experimental, and is known to crash Emacs on some systems, and just
doesn't work on other systems.  Also see etc/PROBLEMS.

+++
*** New user option 'eww-url-transformers'.
These are used to alter an URL before using it.  By default it removes
the common "utm_" trackers from URLs.

** Gnus

---
*** New face 'gnus-header'.
All other 'gnus-header-*' faces inherit from this face now.

+++
*** New user option 'gnus-treat-emojize-symbols'.
If non-nil, symbols that have an emoji representation will be
displayed as emojis.  Default nil.

+++
*** New command 'gnus-article-emojize-symbols'.
This is bound to 'W D e' and will display symbols that have emoji
representation as emojis.

** EIEIO

+++
*** 'slot-value' can now be used to read slots of 'cl-defstruct' objects.

** align

---
*** Alignment in 'text-mode' has changed.
Previously, 'M-x align' didn't do anything, and you had to say 'C-u
M-x align' for it to work.  This has now been changed.  The default
regexp for 'C-u M-x align-regexp' has also been changed to be easier
for inexperienced users to use.

** eww

+++
*** New user option to automatically rename EWW buffers.
The 'eww-auto-rename-buffer' user option can be configured to rename
rendered web pages by using their title, URL, or a user-defined
function which returns a string.  For the first two cases, the length
of the resulting name is controlled by 'eww-buffer-name-length'.  By
default, no automatic renaming is performed.

** Help

*** New user option 'help-link-key-to-documentation'.
When this option is non-nil (which is the default), key bindings
displayed in the "*Help*" buffer will be linked to the documentation
for the command they are bound to.  This does not affect listings of
key bindings and functions (such as 'C-h b').

** info-look

---
*** info-look specs can now be expanded at run time instead of a load time.
The new ':doc-spec-function' element can be used to compute the